--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ body {
   .brand {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.25rem;
   }
 
   .brand img {
@@ -193,7 +193,9 @@ body {
   .home-hero {
     position: relative;
     min-height: 40svh;
-    background-image: url("../images/dog-grooming.jpg");
+    max-width: 600px;
+    margin: 0 auto;
+    background-image: url("../images/hero-image.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
@@ -207,7 +209,7 @@ body {
     content: "";
     position: absolute;
     inset: 0;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.70);
     /* darkness level */
   }
 
@@ -252,11 +254,12 @@ body {
     margin: 0.5rem;
   }
 
-
   .footer-left p {
+    font-size: 0.80rem;
     text-align: left;
     padding: 1rem;
-    padding-bottom: 0.5rem;
+    padding-top: 0.6rem;
+    padding-bottom: 0.25rem;
   }
 
   .footer-right {
@@ -286,6 +289,10 @@ body {
   .footer-socials img {
     width: 44px;
     height: 44px;
+  }
+
+  .footer-hours p {
+    text-align: center;
   }
 
   /* HOME PAGE MOBILE *********************************** */
@@ -366,7 +373,7 @@ body {
   }
 
   .btn:hover {
-    opacity: .85;
+    opacity: .55;
   }
 
   /* Button styling */
@@ -394,6 +401,7 @@ body {
 
   .special-offer img {
     padding-bottom: 1rem;
+    border-radius: 20px;
   }
 
   .special-offer a {
@@ -404,7 +412,18 @@ body {
   .service-card {
     border-bottom: 1px solid black;
     margin-bottom: 1rem;
+    background-color: var(--color1);
+    border-radius: 8px;
+    padding: 0.5rem;
   }
+
+  .service-card img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16 / 9;
+  overflow: hidden;
+  object-fit: cover;
+}
 
   .service-card h3,
   p {
@@ -426,6 +445,10 @@ body {
 
   .service-price p {
     font-weight: bold;
+  }
+
+  .other-services img {
+    border-radius: 20px;
   }
 
   .other-services img,
@@ -467,10 +490,20 @@ body {
 
   .gallery-heading {
     background-color: var(--color1);
+    border-radius: 20px;
+  }
+
+  .gallery-feature {
+    margin: 0 auto;
+    max-width: 600px;
   }
 
   .gallery-heading p {
     text-align: center;
+  }
+
+  .gallery-feature img {
+    border-radius: 20px;    
   }
 
   .feature-text {
@@ -491,16 +524,16 @@ body {
   .gallery-grid img {
     width: 100%;
     display: block;
-    object-fit: cover;
-    /* keeps images uniform */
+    object-fit: cover;    
     aspect-ratio: 1 / 1;
-    /* ensures square images */
+    border-radius: 8px;    
   }
 
   .testimonial-cards {
     display: flex;
     flex-direction: row;
     gap: 0.25rem;
+    justify-content: center;
   }
 
   .test-card {
@@ -556,6 +589,7 @@ body {
     width: 100%;
     height: auto;
     object-fit: cover;
+    border-radius: 10px;
   }
 
   .booking-form {
@@ -703,6 +737,8 @@ body {
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
     /* text-align: left; */
     display: flex;
@@ -782,6 +818,20 @@ body {
     max-width: calc(50% - 1.5rem);
   }
 
+  .footer-left p {
+    font-size: 1rem;
+  }
+
+  .hero-content h2 {
+    font-size: 2rem;
+  }
+
+  .footer-socials {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    
+  }
+
   /* SERVICES --- TABLET */
 
 
@@ -815,7 +865,7 @@ body {
   .home-service-card {
     flex: 1 1 calc(33.333% - 1.5rem);
     /* two cards per row */
-    max-width: calc(33.333% - 1.5rem);
+    max-width: calc(33.333% - 1.5rem);    
   }
 
   .nav-burger {
@@ -945,12 +995,12 @@ body {
   .follow-images {
     display: flex;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 0.85rem;
   }
 
   .follow-images img {
-    width: 58px;
-    height: 58px;
+    width: 48px;
+    height: 48px;
 
   }
 
@@ -979,6 +1029,10 @@ body {
   }
 
   /* BOOKING --- DESKTOP ********************************* */
+
+  .bookings-heading {
+    display: none;
+  }
 
 
 
